<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_agent">Agent</string>
    <string name="title_profile">Profile</string>
    <string name="scan">Scan</string>
    <string name="organic">Organic</string>
    <string name="inorganic">Inorganic</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="glass">Glass</string>
    <string name="plastic">Plastic</string>
    <string name="iron">Iron</string>
    <string name="logout">Logout</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="hidden_password">************</string>
    <string name="change_password">Change Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_enter_your_account_credential">Please enter your account credential</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="don_t_have_any_account">Don\'t have any account?\ </string>
</resources>