<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="name"
            type="String" />
        <variable
            name="email"
            type="String" />
        <variable
            name="password"
            type="String" />
        <variable
            name="passwordConfirmation"
            type="String" />
    </data>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/login_register_padding">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noHpEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/name">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:text="@={name}"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
            android:text="@={email}"
            android:inputType="textEmailAddress"
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:text="@={password}"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/password_confirmation">
        <com.google.android.material.textfield.TextInputEditText
            android:text="@={passwordConfirmation}"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"/>
</androidx.appcompat.widget.LinearLayoutCompat>
</layout>