<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        tools:context=".module.homepage.fragment.profile.NotificationsFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:maxWidth="@dimen/profile_image"
            android:maxHeight="@dimen/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@drawable/trash_image_placeholder"
            tools:src="@drawable/trash_image_placeholder" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            style="@style/PrimaryText"
            tools:text="User's Name"
            android:text="User's Name"
            android:layout_marginTop="24dp"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:src="@drawable/ic_edit"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/userNameTv"
            app:layout_constraintBottom_toBottomOf="@id/userNameTv"
            app:layout_constraintStart_toEndOf="@+id/userNameTv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/glassCountTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            style="@style/Profile.WasteCount"
            tools:text="10"
            android:text="10"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@id/ironCountTv"
            app:layout_constraintStart_toEndOf="@id/plasticCountTv"
            app:layout_constraintTop_toBottomOf="@id/userNameTv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/plasticCountTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Profile.WasteCount"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            tools:text="32"
            android:text="32"
            app:layout_constraintEnd_toStartOf="@id/glassCountTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/glassCountTv"
            app:layout_constraintBottom_toBottomOf="@id/glassCountTv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ironCountTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Profile.WasteCount"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            tools:text="12"
            android:text="32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/glassCountTv"
            app:layout_constraintTop_toTopOf="@id/glassCountTv"
            app:layout_constraintBottom_toBottomOf="@id/glassCountTv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/glassTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:text="@string/glass"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glassCountTv"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:text="@string/plastic"
            app:layout_constraintEnd_toEndOf="@id/plasticCountTv"
            app:layout_constraintStart_toStartOf="@id/plasticCountTv"
            app:layout_constraintTop_toTopOf="@id/glassTv"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:text="@string/iron"
            app:layout_constraintEnd_toEndOf="@id/ironCountTv"
            app:layout_constraintStart_toStartOf="@id/ironCountTv"
            app:layout_constraintTop_toTopOf="@id/glassTv"/>

        <View
            android:id="@+id/separatorV"
            app:layout_constraintTop_toBottomOf="@id/glassTv"
            android:layout_height="5dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:background="#F4F5F7"/>

<!--Gender        -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/genderListCard"
            android:layout_width="match_parent"
            style="@style/Profile.Card"
            app:layout_constraintTop_toBottomOf="@id/separatorV"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:drawableStart="@drawable/ic_gender"
                android:text="@string/gender"
                style="@style/Profile.LeftPart"/>
            <com.google.android.material.textview.MaterialTextView
                style="@style/Profile.RightPart"
                android:text="Male"
                tools:text="Male"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

<!--Email        -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/emailCard"
            android:layout_width="match_parent"
            style="@style/Profile.Card"
            app:layout_constraintTop_toBottomOf="@id/genderListCard"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:drawableStart="@drawable/ic_email"
                    android:text="@string/email"
                    style="@style/Profile.LeftPart"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Profile.RightPart"
                    android:text="placeholderemail@asaa.com"
                    tools:text="placeholderemail@asaa.com" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

<!--Phone Number        -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/phoneNumberCard"
            style="@style/Profile.Card"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/emailCard"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="@dimen/activity_vertical_margin"

                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:drawableStart="@drawable/ic_phone"
                    android:text="@string/phone_number"
                    style="@style/Profile.LeftPart"/>
                <com.google.android.material.textview.MaterialTextView
                    style="@style/Profile.RightPart"
                    android:text="081239896239"
                    tools:text="081239896239"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

<!--   Change Password     -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/changePasswordCard"
            android:layout_width="match_parent"
            style="@style/Profile.Card"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberCard"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:drawableStart="@drawable/ic_change_password"
                    android:text="@string/change_password"
                    style="@style/Profile.LeftPart"/>
                <com.google.android.material.textview.MaterialTextView
                    style="@style/Profile.RightPart"
                    android:text="@string/hidden_password"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5842"
            android:paddingVertical="16dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="@string/logout"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:drawableStart="@drawable/common_full_open_on_phone"
            app:layout_constraintTop_toBottomOf="@id/changePasswordCard"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>